--- a/_config.yml
+++ b/_config.yml
@@ -59,4 +59,4 @@ projects:
     description: "osx app to use the current spotify song as skype mood"
     url: "https://github.com/dvcrn/Moody"
     date: "2012-03-01"
-    active: true
+    active: false
